--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -708,29 +708,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="$(cat << EOF
-                          !5?.                    
-               .^!!!^:.    .#@B!    .             
-               ..~Y&@@@&P.  ^@@@&^  PP            
-             ....   J@@#:   Y@@@&B. J@B           
-        .!P&@@@@@7   &@&!~7B@@@~   .&@@5          
-       .~!~!?5#@@&J?B@@@@@@@@@@G!~J@@@@& :^       
-         :?G.  ?@@@@@@@@&&&@@@@@@@@@G~~^ #P       
-       7&@@@#YP&@@@@#?:    .^Y&@@@@@J..~&@Y       
-     .G#?^:~#@@@@@P:  .~77~.  .P@@@@@@@@@@: ^     
-     :: 7~..Y@@@@7  :B@@@@@@7   #@@@@@Y.::.B7     
-       #@@@@@@@@Y  .@@@G!~J@#   G@@@@@B77P@&      
-      P&~..^@@@@^  7@@&    ?.  ~@@@@@@@@@@@.      
-      7 :^:?@@@@J  :@@@P^.  .~G@@@@@@@@@@&.       
-        #@@BG&@@@^  ~&@@@@@@@@@@@@@@@@@@5         
-        &&.  .@@@@!   7&@@@@@@@@@@@@@@G:          
-        ?^ BB&@@@@@G:   :7G&@@@@@@@@5:            
-           5@5...!&@@B!.    .^7YBB7.              
-            !.    :@@@@@G?^.                      
-          :^.....~#@@@@@@@@Y.                     
-           :7YG#@@@@@@&GJ^.                       
-EOF
-)"
+image_source="auto"
 
 # Ascii Options
 
