--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -189,15 +189,15 @@ map cmd+minus change_font_size current -2.0
 map cmd+0 change_font_size current 0
 map kitty_mod+l show_last_command_output
 
-map ctrl+1 goto_tab 1
-map ctrl+2 goto_tab 2
-map ctrl+3 goto_tab 3
-map ctrl+4 goto_tab 4
-map ctrl+5 goto_tab 5 
-map ctrl+6 goto_tab 6
-map ctrl+7 goto_tab 7
-map ctrl+8 goto_tab 8
-map ctrl+9 goto_tab 9
-map ctrl+0 goto_tab 10
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5 
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+map cmd+0 goto_tab 10
 # just for indent-blankline.nvim
 modify_font underline_position +7
