--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,104 +14,37 @@
 ## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine-dawn.conf
 ## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
-foreground               #575279
-background               #faf4ed
-selection_foreground     #575279
-selection_background     #dfdad9
+foreground  #d3c6aa
+background  #2d353b
 
-cursor                   #eb34db
-cursor_text_color        #575279
+cursor_trail 3
 
-url_color                #907aa9
+cursor                #eb34db
 
-active_tab_foreground    #575279
-active_tab_background    #f2e9e1
-inactive_tab_foreground  #9893a5
-inactive_tab_background  #faf4ed
+selection_foreground  #d3c6aa
+selection_background  #505a60
 
-active_border_color      none
-inactive_border_color    #dfdad9
+active_tab_foreground    #d3c6aa
+active_tab_background    #475258
+inactive_tab_foreground  #505a60
+inactive_tab_background  #2d353b
 
-# black
-color0   #f2e9e1
-color8   #9893a5
-
-# red
-color1   #b4637a
-color9   #b4637a
-
-# green
-color2   #286983
-color10  #286983
-
-# yellow
-color3   #ea9d34
-color11  #ea9d34
-
-# blue
-color4   #56949f
-color12  #56949f
-
-# magenta
-color5   #907aa9
-color13  #907aa9
-
-# cyan
-color6   #d7827e
-color14  #d7827e
-
-# white
-color7   #575279
-c
-#foreground               #e0def4
-#background               #232136
-#selection_foreground     #e0def4
-#selection_background     #44415a
-#
-#cursor                   #56526e
-#cursor_text_color        #e0def4
-#
-#url_color                #c4a7e7
-#
-#active_tab_foreground    #e0def4
-#active_tab_background    #393552
-#inactive_tab_foreground  #6e6a86
-#inactive_tab_background  #232136
-#
-#active_border_color      none
-#inactive_border_color    #44415a
-#
-## black
-#color0   #393552
-#color8   #6e6a86
-#
-## red
-#color1   #eb6f92
-#color9   #eb6f92
-#
-## green
-#color2   #3e8fb0
-#color10  #3e8fb0
-#
-## yellow
-#color3   #f6c177
-#color11  #f6c177
-#
-## blue
-#color4   #9ccfd8
-#color12  #9ccfd8
-#
-## magenta
-#color5   #c4a7e7
-#color13  #c4a7e7
-#
-## cyan
-#color6   #ea9a97
-#color14  #ea9a97
-#
-## white
-#color7   #e0def4
-#color15  #e0def4
+color0  #475258
+color8  #475258
+color1  #e67e80
+color9  #e67e80
+color2  #a7c080
+color10 #a7c080
+color3  #dbbc7f
+color11 #dbbc7f
+color4  #7fbbb3
+color12 #7fbbb3
+color5  #d699b6
+color13 #d699b6
+color6  #83c092
+color14 #83c092
+color7  #d3c6aa
+color15 #d3c6aa
 
 font_family      JetBrains Mono Medium
 bold_font        JetBrains Mono Bold
@@ -151,7 +84,7 @@ macos_option_as_alt yes
 
 macos_show_window_title_in none
 hide_window_decorations yes
-window_padding_width 25 20
+window_padding_width 0 0
 
 font_size 20
 
@@ -161,8 +94,8 @@ modify_font cell_width 100%
 enabled_layouts stack,tall:bias=60
 
 tab_bar_edge               top
-tab_bar_margin_width       5.0
-tab_bar_margin_height      7.5 0
+tab_bar_margin_width       0.0
+tab_bar_margin_height      0.0 0
 tab_bar_style              separator
 tab_separator              " "
 tab_bar_align              left
